fix: left-align custom markdown content on homepage

--- a/src/midas/static/style.css
+++ b/src/midas/static/style.css
@@ -142,6 +142,10 @@ main {
   margin-bottom: 1rem;
 }
 
+.home-content {
+  text-align: left;
+}
+
 .socials {
   display: flex;
   justify-content: center;
